mais dll e header file

--- a/utils_so2_tp/utils.vcxproj.filters
+++ b/utils_so2_tp/utils.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="header.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="utils_so2_tp.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="file.c">
