--- a/utils_so2_tp/utils.vcxproj
+++ b/utils_so2_tp/utils.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
+    <ClInclude Include="utils_so2_tp.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="file.c" />
