definição de funções e implementação dos comandos do monitor para o servidor
organização das funções por ficheiros

--- a/monitor/monitor.vcxproj.filters
+++ b/monitor/monitor.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="monitor.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="printPecas.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="threads.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="printPecas.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="threads.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
