--- a/monitor/monitor.vcxproj
+++ b/monitor/monitor.vcxproj
@@ -20,6 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="monitor.c" />
+    <ClCompile Include="printPecas.c" />
+    <ClCompile Include="threads.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="printPecas.h" />
+    <ClInclude Include="threads.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
