named pipe nao da, TRACKMOUSEEVENT o tempo nao da,

--- a/servidor/servidor.vcxproj.filters
+++ b/servidor/servidor.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="inicializar.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="comandosCliente.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pathfindAgua.h">
@@ -48,6 +51,9 @@
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
     <ClInclude Include="inicializar.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="comandosCliente.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
